// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotFound /> should render default 1`] = `
<NotFound__StyledNotFound>
  <Label__DangerLabel>
    404
  </Label__DangerLabel>
  <strong>
    Not found
  </strong>
</NotFound__StyledNotFound>
`;

exports[`<NotFound /> should render with message 1`] = `
<NotFound__StyledNotFound>
  <Label__DangerLabel>
    404
  </Label__DangerLabel>
  <strong>
    Resource missing
  </strong>
</NotFound__StyledNotFound>
`;

exports[`<NotFound /> should render with status 1`] = `
<NotFound__StyledNotFound>
  <Label__DangerLabel>
    409
  </Label__DangerLabel>
  <strong>
    Not found
  </strong>
</NotFound__StyledNotFound>
`;
